# BasicHollowing

./: Cargo.toml  README.md  build.rs
src/: hollow.rs  lib.rs  main.rs
