[package]
name = "process_hollow"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = "symbols"
opt-level = "z"
lto = true

# [lib]
# crate-type = ["cdylib"]

[dependencies]
log = "0.4.29"
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["errhandlingapi", "fileapi", "handleapi", "memoryapi", "minwindef", "ntdef", "processthreadsapi", "winbase", "winnt"] }
anyhow = "1.0.100"
env_logger = "0.11.8"
ureq = "3.1.4"
flate2 = "1.1.5"
aes-gcm = "0.10.3"

[dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Wdk_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices"
]

[build-dependencies]
flate2 = "1.0"
aes-gcm = "0.10.3"